Cleaning code (normalization has some problem